--- a/package.json
+++ b/package.json
@@ -7,11 +7,19 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.2.0",
+    "@types/node": "^18.11.3",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
     "framer-motion": "^7.2.1",
+    "mapbox-gl": "^2.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-map-gl": "^7.0.19",
     "react-scripts": "5.0.1",
     "sass": "^1.54.8",
+    "typed-scss-modules": "^7.0.1",
+    "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/node-sass": "^4.11.3",
     "gh-pages": "^4.0.0"
   }
 }
