--- a/package.json
+++ b/package.json
@@ -1,55 +1,54 @@
 {
-  "name": "main-site",
-  "version": "0.1.0",
-  "homepage": "https://kaletva.github.io/main-site",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^29.2.0",
-    "@types/node": "^18.11.3",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "framer-motion": "^7.2.1",
-    "mapbox-gl": "^2.10.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-map-gl": "^7.0.19",
-    "react-scripts": "5.0.1",
-    "sass": "^1.54.8",
-    "typed-scss-modules": "^7.0.1",
-    "typescript": "^4.8.4",
-    "web-vitals": "^2.1.4"
-  },
+  "name": "rps-game",
+  "version": "1.0.0",
+  "description": "",
+  "main": "src/index.tsx",
+  "homepage": "https://kaletva.github.io/RPSGame",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
+    "start": "npm run build && node server/index.tsx",
+    "dev": "webpack serve --config webpack.config.js",
+    "build": "NODE_ENV=production webpack --config webpack.config.js",
+    "build:dev": "NODE_ENV=development webpack --config webpack.config.js",
+    "build:watch": "NODE_ENV=development node ./node_modules/webpack/bin/webpack.js --config webpack.config.js --watch",
     "deploy": "gh-pages -d build"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@babel/preset-typescript": "^7.18.6",
+    "@reduxjs/toolkit": "^1.8.6",
+    "@types/react": "^18.0.24",
+    "@types/react-dom": "^18.0.8",
+    "@types/styled-components": "^5.1.26",
+    "@types/webpack-env": "^1.18.0",
+    "body-parser": "^1.19.1",
+    "framer-motion": "^7.6.4",
+    "react": "^18.0.24",
+    "react-dom": "^18.0.24",
+    "react-redux": "^8.0.4",
+    "react-router-dom": "^6.4.2",
+    "styled-components": "^5.3.6",
+    "ts-loader": "^9.4.1",
+    "typescript": "^4.8.4",
+    "url-loader": "^4.1.1"
   },
   "devDependencies": {
-    "@types/node-sass": "^4.11.3",
-    "gh-pages": "^4.0.0"
+    "@babel/core": "^7.16.5",
+    "@babel/preset-env": "^7.16.5",
+    "@babel/preset-react": "^7.16.5",
+    "@svgr/webpack": "^6.5.1",
+    "babel-loader": "^8.2.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.5.1",
+    "gh-pages": "^4.0.0",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.4.5",
+    "sass": "^1.45.1",
+    "sass-loader": "^12.4.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.1"
   }
 }
