--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,11 @@
 {
-    "compilerOptions": {
+  "compilerOptions": {
+      "outDir": "./dist",
+      "target": "es5",
+      "module": "es6",
       "jsx": "react",
+      "noImplicitAny": true,
       "allowSyntheticDefaultImports": true,
-      "esModuleInterop": true,
-      "resolveJsonModule": true,
-    },
-    "include": [
-        "src",
-        "src/components", 
-    ]
-  }
+      "moduleResolution":"node",
+    }
+}
